use process builder instead of Runtime.exec in order to better deal with environment variables
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current@3349 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde